themes/default/css/template.css
/* ... */
body > .container-fluid {
    padding: 0;
    background: #ffffff;
}

body > .container-fluid.fixed {
    width: 960px;
    margin: 30px auto;
}

body > .container-fluid.fluid-boxed {
    width: 91%;
    margin: 30px auto;
}

body > .container-fluid.documentation {
    background: #ffffff;
}

#content {
    position: relative;
    overflow: visible;
    margin: 0 0 20px 191px;
    background: #fff;
    min-width: 320px;
    padding: 0 0 10px;
}

#content.padding-none {
    padding: 0;
}

#content > .menubar {
    border-left: 0;
    border-right: 0;
}

#content > p {
    padding: 0 10px 5px;
}

#content > h1,
#content > h2,
#content > h3,
#content > h4,
#content > h5,
#content > h6 {
    margin: 0 10px 10px;
}

#content > .filter-bar {
    border-right: 0;
    border-left: 0;
}

#content .heading-mosaic {
    height: 48px;
    line-height: 48px;
    padding: 0 0px;
   /*  background: #ffffff url(../img/mosaic-pattern.png) repeat; */
   background: white;
    margin: 0 0 10px;
    font-weight: 400;
    position: fixed;
    top: 65px;
    z-index: 2;
    width: 100%;
}

#content h3.heading-mosaic {
    font-size: 16pt;
    padding-left: 49px;
    font-weight: bold;
}

.subtitle{
    line-height: 156px;
    margin-left: 45px;
    color: #5F738C;
}

#content h2.heading-mosaic {
    font-size: 20pt;
    height: 49px;
    line-height: 49px;
}

#content .heading-arrow {
    text-transform: uppercase;
    border-bottom: 1px solid #ddd;
    margin: 0 0 10px;
    padding: 0 15px;
    font-size: 11pt;
    height: 35px;
    line-height: 30px;
    position: relative;
}

#content .heading-arrow:after {
    content: "";
    display: inline-block;
    width: 0;
    height: 0;
    border-bottom: 8px solid #ddd;
    border-right: 8px solid transparent;
    border-left: 8px solid transparent;
    position: absolute;
    bottom: 0;
    left: 15px;
}

#content .heading-arrow.glyphicons {
    padding: 0 10px 0 40px;
}

#content .heading-arrow.glyphicons i:before {
    font-size: 17px;
    left: 15px;
}

#content .heading-arrow.margin-bottom-none {
    margin-bottom: 0;
}

#content > .widget {
    border-left: 0;
    border-right: 0;
}

#content > .widget .widget-head,
#content > .widget .widget-body {
    border-left: 0;
    border-right: 0;
}

#content > .widget:last-child {
    margin: 0;
}

#content > .table {
    border-left: 0;
    border-right: 0;
}

#content > .table tr td:first-child {
    border-left: 0;
}

#footer {
    background: rgba(0, 0, 0, 0.9) url(../img/mosaic-pattern.png) repeat;
    border-top: 1px solid rgba(255, 255, 255, 0.2);
    color: #fff;
    padding: 10px 10px 30px;
    position: relative;
    overflow: hidden;
}

#footer a:not(.btn) {
    color: #dadada;
}

#footer .copy {
    background: rgba(0, 0, 0, 0.2);
    padding: 5px 10px;
    position: absolute;
    left: 0;
    right: 0;
    height: 20px;
}

#footer .copy a {
    color: #e04545;
}

#footer .row-menu {
    padding: 10px;
}

#footer .row-menu [class*="span"] > ul {
    margin: 0;
}

.ui-resizable-helper.menu {
    border: 1px dotted gray;
    border-left: 0;
    background: rgba(0, 0, 0, 0.3);
}

.ui-resizable-handle {
    width: 3px;
    border-style: solid;
    border-width: 0;
    border-color: rgba(0, 0, 0, 0.1);
}
.colorful-bar {
    display: flex;
    width: 100%;
}

.colorful-bar span {
    width: 25%;
    height: 4px;
}

#span-color-blue{
    background: #667DF4;
}
#span-color-red{
    background: #F45A5A;
}
#span-color-green{
    background: #66D654;
}
#span-color-yellow{
    background: #EADA48;
}

#menu {
    width: 190px;
    float: left;
    position: fixed;
    height: 100%;
    overflow-y: auto;
    overflow-x: hidden;
    z-index: 2;
    top: 0px;
   /*margin-bottom: -99999px;
    padding-left: 99999px; */
    background: #FAFAFE;
    color: #7c7c7c;
}
#menu::-webkit-scrollbar {
    display: none;
}

@media (max-width: 992px) { 
    #menu {
        z-index: 99;
        box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
    }
    .navbar.main {
        width: 100% !important;
    }
    #content {
        margin: 0 0 20px 0px;
    }
    #logo-menu{
        margin-left: 10px;
    }

 }

#menu .profile {
    display: block;
    height: 73px;
    line-height: normal;
    padding: 10px;
    border-bottom: 1px solid #d2d2d2;
    background: #ffffff;
}

#menu .profile span {
    text-align: left;
    display: block;
    padding: 3px 0 0;
    width: 178px;
    float: right;
}

#menu .profile span strong {
    display: block;
    color: #7c7c7c;
    font-size: 14px;
    font-weight: 400;
}

#menu .profile span a {
    color: #e04545;
    font-size: 14px;
    padding: 0 25px 0 0;
}

#menu .profile span a i:before {
    font-size: 17px;
    color: #64625f;
    left: auto;
    right: 0;
    top: 2px;
}

#menu .profile .img {
    border: 2px solid #fff;
    display: block;
    width: 40px;
    float: left;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
}

#menu .profile .img img {
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
}

#menu .profile .img:hover {
    border-color: #ffffff;
}

#menu #notif ul {
    margin: 0;
    padding: 10px;
    list-style: none;
    text-align: center;
}

#menu #notif ul li {
    height: 22px;
    line-height: 22px;
    display: inline-block;
    padding: 0 2px;
}

#menu #notif ul li:last-child {
    padding: 0 0 0 2px;
}

#menu #notif ul li > a {
    display: block;
    background: #fff;
    color: #7c7c7c;
    text-decoration: none;
    padding: 0 5px;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
}

#menu #notif ul li > a .text {
    display: inline-block;
    padding-left: 10px;
}

#menu #notif ul li > a.glyphicons {
    padding: 0 5px 0 25px;
}

#menu #notif ul li > a.glyphicons i:before {
    color: #d0d0cf;
    font-size: 15px;
    top: 3px;
    left: 5px;
}

#menu #notif ul li > a:hover {
    color: #7c7c7c;
    background: #ffffff;
}
/* ... */

